// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavListItem/> renders matching snapshot when active 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 12px;
  list-style-type: none;
  border-radius: 4px;
}

.c0:hover {
  background-color: rgb(216,221,224);
}

.c0 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus {
  box-shadow: none;
}

.c0 img {
  padding-top: 2px;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  width: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 div {
  padding-left: 4px;
  padding-right: 4px;
  color: rgb(33,43,50);
}

<li
    class="c0"
    style="background: rgb(255, 235, 59); font-weight: 700;"
  >
    <a
      href="/workspaces/workspace-id/folders/folder-id"
    >
      <img
        src="/public/folderOpen.svg"
      />
      <div>
        folder title
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`<NavListItem/> renders matching snapshot when not active 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 12px;
  list-style-type: none;
  border-radius: 4px;
}

.c0:hover {
  background-color: rgb(216,221,224);
}

.c0 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus {
  box-shadow: none;
}

.c0 img {
  padding-top: 2px;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  width: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 div {
  padding-left: 4px;
  padding-right: 4px;
  color: rgb(33,43,50);
}

<li
    class="c0"
  >
    <a
      href="/workspaces/workspace-id/folders/folder-id"
    >
      <img
        src="/public/folderClosed.svg"
      />
      <div>
        folder title
      </div>
    </a>
  </li>
</DocumentFragment>
`;
